--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "install": "electron-builder install-app-deps",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^25.0.1"
+    "electron": "^25.0.1",
+    "electron-builder": "^23.6.0"
+  },
+  "build": {
+    "appId": "com.electron.electron-notifications",
+    "productName": "Toast Notifications Examples"
+  },
+  "dependencies": {
+    "electron-windows-notifications": "^3.0.8"
   }
 }
