--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
-    "install": "electron-builder install-app-deps",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^25.0.1",
-    "electron-builder": "^23.6.0"
+    "@electron-forge/cli": "^6.1.1",
+    "@electron-forge/maker-deb": "^6.1.1",
+    "@electron-forge/maker-rpm": "^6.1.1",
+    "@electron-forge/maker-squirrel": "^6.1.1",
+    "@electron-forge/maker-zip": "^6.1.1",
+    "electron": "^25.0.1"
   },
-  "build": {
-    "appId": "com.electron.electron-notifications",
-    "productName": "Toast Notifications Examples"
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
